...

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/dobEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            app:layout_constraintTop_toBottomOf="@id/genderTextView">
            <RadioButton
                android:id="@+id/mRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:text="@string/m" />
            <RadioButton
                android:id="@+id/fRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:text="@string/f" />
            <RadioButton
                android:id="@+id/oRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
...
            app:ccp_autoDetectCountry="true"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/phoneEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />
...

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/emergencyNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/emergencyPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/emergencyEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
