...
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_string">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="destination_hint">Where today?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="logo">Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="others">I do not wish to specify</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home_address">Home Address(Optional)</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="cancel">cancel</string>
    <string name="send_email">Send Email</string>
    <string name="emergency_contact_optional">Emergency Contact (Optional)</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="empty_error">This field cannot be empty!</string>
    <string name="book_journey">Book Journey</string>
    <string name="to">To</string>
    <string name="preferences">Preferences</string>
    <string name="from">From</string>
    <string name="select_date_and_time">Select Date and Time</string>
...
